3 three section done

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
             </h2>
             <p>The best platform where content creators meet their audience. Supporters can subscribe and support to
               their favourite creators and everyone's on win-win</p>
+
+            <a href="#">Explore Creators</a>
           </div>
         </div>
       </div>
@@ -61,7 +63,7 @@
               <a class="nav-link user-btn" href="#"><i class="fa-solid fa-user"></i> User</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link login-btn" href="#">Login</a>
+              <a class="nav-link login-btn" href="#"><i class="fa-solid fa-arrow-right-to-bracket"></i>Login</a>
             </li>
             <form class="d-flex search-box">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -75,6 +77,70 @@
     </nav>
   </header>
   <!-- header ends -->
+
+
+  <!-- testing-part start -->
+  <section id="testing-part">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 text-center">
+          <div class="text-box">
+            <i class="fa-solid fa-note-sticky"></i>
+            <h4>Iterative Testing</h4>
+            <p>We do iterative testing. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, optio?</p>
+          </div>
+        </div>
+        <div class="col-lg-6 text-center">
+          <div class="text-box">
+            <i class="fa-regular fa-clipboard"></i>
+            <h4>Iterative Testing</h4>
+            <p>We do iterative testing. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, optio?</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- testing-part ends -->
+
+  <!-- creators start-->
+  <section id="creators">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6"></div>
+        <div class="col-lg-6">
+          <h4>How it works for creators</h4>
+          <p>Your supporters decide to reward you for your hard work by paying a monthly subscription. In exchange, you
+            keep doing what you love & also offer them some perks.</p>
+          <p style="padding-bottom: 20px;"> Also, you can get a ton of tips from your most advocate fans.</p>
+
+          <a href="#">
+            WEREDE EIN CREATOR
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- creators ends-->
+
+    <!-- creators start-->
+    <section id="supporters">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <h4>How it works for creators</h4>
+            <p>Your supporters decide to reward you for your hard work by paying a monthly subscription. In exchange, you
+              keep doing what you love & also offer them some perks.</p>
+            <p style="padding-bottom: 20px;"> Also, you can get a ton of tips from your most advocate fans.</p>
+  
+            <a href="#">
+              LOGIN
+            </a>
+          </div>
+          <div class="col-lg-6"></div>
+        </div>
+      </div>
+    </section>
+    <!-- creators ends-->
 
 
 
