--- a/index.html
+++ b/index.html
@@ -78,6 +78,39 @@
   </header>
   <!-- header ends -->
 
+  <!-- desktop-image starts -->
+  <section id="desktop-image">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2>Lorem ipsum dolor sit amet consectetur </h2>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit, aspernaturadipisicing elit. Velit,
+            aspernatur.</p>
+        </div>
+        <div class="col-lg-8">
+          <div class="mac">
+            <div class="mac-wallpaper">
+              <img src="./assets/images/wallpaper.jpg" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <p class="side-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt, eum! amet consectetur
+            adipisicing elit.
+            Incidunt, eum! amet consectetur adipisicing elit. Incidunt, eum! amet consectetur adipisicing elit.
+            Incidunt, eum!</p>
+          <div class="macbook">
+            <div class="macbook-wallpaper">
+              <img src="./assets/images/wallpaper-macbook.jpg" alt="">
+            </div>
+            <!-- <img src="./assets/images/macbook.png" alt=""> -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- desktop-image ends -->
+
 
   <!-- testing-part start -->
   <section id="testing-part">
@@ -122,25 +155,25 @@
   </section>
   <!-- creators ends-->
 
-    <!-- creators start-->
-    <section id="supporters">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6">
-            <h4>How it works for creators</h4>
-            <p>Your supporters decide to reward you for your hard work by paying a monthly subscription. In exchange, you
-              keep doing what you love & also offer them some perks.</p>
-            <p style="padding-bottom: 20px;"> Also, you can get a ton of tips from your most advocate fans.</p>
-  
-            <a href="#">
-              LOGIN
-            </a>
-          </div>
-          <div class="col-lg-6"></div>
+  <!-- creators start-->
+  <section id="supporters">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <h4>How it works for creators</h4>
+          <p>Your supporters decide to reward you for your hard work by paying a monthly subscription. In exchange, you
+            keep doing what you love & also offer them some perks.</p>
+          <p style="padding-bottom: 20px;"> Also, you can get a ton of tips from your most advocate fans.</p>
+
+          <a href="#">
+            LOGIN
+          </a>
         </div>
+        <div class="col-lg-6"></div>
       </div>
-    </section>
-    <!-- creators ends-->
+    </div>
+  </section>
+  <!-- creators ends-->
 
 
 
