--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 
             <a href="#">Explore Creators</a>
           </div>
+          <div class="col-lg-5">
+            <img src="./assets/images/banner.png" alt="">
+          </div>
         </div>
       </div>
     </div>
@@ -46,7 +49,7 @@
     <nav class="navbar navbar-expand-lg navbar-light ">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="./assets/images/logo-white.png" alt="">
+          <img src="./assets/images/logo.png" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -89,7 +92,7 @@
             elit. Velit,
             aspernatur.</p>
         </div>
-        <div class="col-lg-8">
+        <!-- <div class="col-lg-8">
           <div class="mac">
             <div class="mac-wallpaper">
               <img src="./assets/images/wallpaper.jpg" alt="">
@@ -107,7 +110,21 @@
             <div class="macbook-wallpaper">
               <img src="./assets/images/wallpaper-macbook.jpg" alt="">
             </div>
-            <!-- <img src="./assets/images/macbook.png" alt=""> -->
+          </div>
+        </div> -->
+
+
+        
+        <div class="col-lg-12">
+          <div class="full-image">
+            <img src="./assets/images/full-image.jpg" alt="">
+
+            <div class="side-text">
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt, eum! amet consectetur
+                adipisicing elit.
+                Incidunt, eum! amet consectetur adipisicing elit. Incidunt, eum! amet consectetur adipisicing elit.
+                Incidunt, eum!</p>
+            </div>
           </div>
         </div>
       </div>
@@ -164,7 +181,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6">
-          <h4>How it works for creators</h4>
+          <h4>How it works for Supports</h4>
           <p>Your supporters decide to reward you for your hard work by paying a monthly subscription. In exchange, you
             keep doing what you love & also offer them some perks.</p>
           <p style="padding-bottom: 20px;"> Also, you can get a ton of tips from your most advocate fans.</p>
@@ -174,6 +191,25 @@
           </a>
         </div>
         <div class="col-lg-6"></div>
+      </div>
+    </div>
+  </section>
+  <!-- creators ends-->
+
+
+  
+  <!-- fees start-->
+  <section id="fees">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-1"></div>
+        <div class="col-lg-5"></div>
+        <div class="col-lg-5">
+          <h4>Our fees explained</h4>
+          <p>We'll take 5% to cover expenses like transaction fees and our platform running fees.</p>
+          <p style="padding-bottom: 20px;">Nothing else is hidden or unclear. We will take care of the hassle.</p>
+        </div>
+        <div class="col-lg-1"></div>
       </div>
     </div>
   </section>
